--- a/movies-data.ipynb
+++ b/movies-data.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "4  \\n    Director:\\nMatthias Schweighöfer\\n| \\n  ...      NaN      NaN   NaN  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "(9999, 9)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "8     Gross   9539  95.399540"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "max       9.900000   853.000000"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,21 +572,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'movies' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmovies\u001b[49m\u001b[38;5;241m.\u001b[39mfillna({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGENRE\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDesconocido\u001b[39m\u001b[38;5;124m'\u001b[39m }, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'movies' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "movies.fillna({'GENRE':'Desconocido' }, inplace=True)\n"
@@ -601,19 +589,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'movies' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmovies\u001b[49m[movies[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGENRE\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDesconocido\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'movies' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MOVIES</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>GENRE</th>\n",
+       "      <th>RATING</th>\n",
+       "      <th>ONE-LINE</th>\n",
+       "      <th>STARS</th>\n",
+       "      <th>VOTES</th>\n",
+       "      <th>RunTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2124</th>\n",
+       "      <td>Rodney &amp; Sheryl</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\\nBased on the unbelievable true story of seri...</td>\n",
+       "      <td>\\n    Director:\\nChloe Okuno\\n| \\n    Star:\\nA...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3144</th>\n",
+       "      <td>Our Man from Jersey</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\\nAdd a Plot\\n</td>\n",
+       "      <td>\\n            \\n    Stars:\\nMark Wahlberg, \\nH...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3433</th>\n",
+       "      <td>The Upper World</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\\nEsso is caught in a deadly feud and on the v...</td>\n",
+       "      <td>\\n            \\n    Star:\\nDaniel Kaluuya\\n</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3695</th>\n",
+       "      <td>Kod Adi: Kulüp</td>\n",
+       "      <td>(2021– )</td>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\\nAdd a Plot\\n</td>\n",
+       "      <td>\\n            \\n    Stars:\\nGökçe Bahadir, \\nB...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4039</th>\n",
+       "      <td>Oompa-Loompas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\\nTV series centering on the adventures of the...</td>\n",
+       "      <td>\\n</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6453</th>\n",
+       "      <td>Untitled Tituss Burgess/Netflix Project</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\\nPlot under wraps.</td>\n",
+       "      <td>\\n</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6461</th>\n",
+       "      <td>One Piece: Enter Chopper at the Winter Island</td>\n",
+       "      <td>(2020 TV Movie)</td>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\\nAdd a Plot\\n</td>\n",
+       "      <td>\\n</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8769</th>\n",
+       "      <td>Rádio Coisa Mais Linda</td>\n",
+       "      <td>(2020)</td>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\\nAdd a Plot\\n</td>\n",
+       "      <td>\\n    Director:\\nCaito Ortiz\\n| \\n    Stars:\\n...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8770</th>\n",
+       "      <td>Rádio Coisa Mais Linda</td>\n",
+       "      <td>(2020)</td>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\\nAdd a Plot\\n</td>\n",
+       "      <td>\\n    Director:\\nCaito Ortiz\\n| \\n    Stars:\\n...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8771</th>\n",
+       "      <td>Rádio Coisa Mais Linda</td>\n",
+       "      <td>(2020)</td>\n",
+       "      <td>Desconocido</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\\nAdd a Plot\\n</td>\n",
+       "      <td>\\n    Director:\\nCaito Ortiz\\n| \\n    Stars:\\n...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>80 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             MOVIES             YEAR  \\\n",
+       "2124                                Rodney & Sheryl              NaN   \n",
+       "3144                            Our Man from Jersey              NaN   \n",
+       "3433                                The Upper World              NaN   \n",
+       "3695                                 Kod Adi: Kulüp         (2021– )   \n",
+       "4039                                  Oompa-Loompas              NaN   \n",
+       "...                                             ...              ...   \n",
+       "6453        Untitled Tituss Burgess/Netflix Project              NaN   \n",
+       "6461  One Piece: Enter Chopper at the Winter Island  (2020 TV Movie)   \n",
+       "8769                         Rádio Coisa Mais Linda           (2020)   \n",
+       "8770                         Rádio Coisa Mais Linda           (2020)   \n",
+       "8771                         Rádio Coisa Mais Linda           (2020)   \n",
+       "\n",
+       "            GENRE  RATING                                           ONE-LINE  \\\n",
+       "2124  Desconocido     NaN  \\nBased on the unbelievable true story of seri...   \n",
+       "3144  Desconocido     NaN                                     \\nAdd a Plot\\n   \n",
+       "3433  Desconocido     NaN  \\nEsso is caught in a deadly feud and on the v...   \n",
+       "3695  Desconocido     NaN                                     \\nAdd a Plot\\n   \n",
+       "4039  Desconocido     NaN  \\nTV series centering on the adventures of the...   \n",
+       "...           ...     ...                                                ...   \n",
+       "6453  Desconocido     NaN                                \\nPlot under wraps.   \n",
+       "6461  Desconocido     NaN                                     \\nAdd a Plot\\n   \n",
+       "8769  Desconocido     NaN                                     \\nAdd a Plot\\n   \n",
+       "8770  Desconocido     NaN                                     \\nAdd a Plot\\n   \n",
+       "8771  Desconocido     NaN                                     \\nAdd a Plot\\n   \n",
+       "\n",
+       "                                                  STARS VOTES  RunTime  \n",
+       "2124  \\n    Director:\\nChloe Okuno\\n| \\n    Star:\\nA...   NaN      NaN  \n",
+       "3144  \\n            \\n    Stars:\\nMark Wahlberg, \\nH...   NaN      NaN  \n",
+       "3433        \\n            \\n    Star:\\nDaniel Kaluuya\\n   NaN      NaN  \n",
+       "3695  \\n            \\n    Stars:\\nGökçe Bahadir, \\nB...   NaN      NaN  \n",
+       "4039                                                 \\n   NaN      NaN  \n",
+       "...                                                 ...   ...      ...  \n",
+       "6453                                                 \\n   NaN      NaN  \n",
+       "6461                                                 \\n   NaN      NaN  \n",
+       "8769  \\n    Director:\\nCaito Ortiz\\n| \\n    Stars:\\n...   NaN      NaN  \n",
+       "8770  \\n    Director:\\nCaito Ortiz\\n| \\n    Stars:\\n...   NaN      NaN  \n",
+       "8771  \\n    Director:\\nCaito Ortiz\\n| \\n    Stars:\\n...   NaN      NaN  \n",
+       "\n",
+       "[80 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -629,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
